<resources>
    <string name="app_name">Movie Night Planner</string>
    <string name="day">day</string>
    <string name="month">month</string>
    <string name="year">year</string>
    <string name="timeHour">timeHour</string>
    <string name="timeMinute">timeMinute</string>
    <string name="set_time">Set Time</string>
    <string name="set_date">Set Date</string>
    <string name="add_event">Add Event</string>
    <string name="add_event_title">List of Events</string>
    <string name="add_event_start_date">Start Date</string>
    <string name="add_event_set_start_date">Set Start Date</string>
    <string name="add_event_start_time">Start Time</string>
    <string name="add_event_set_start_time">Set Start Time</string>
    <string name="add_event_end_date">End Date</string>
    <string name="add_event_end_time">End Time</string>
    <string name="add_event_set_end_date">Set End Date</string>
    <string name="add_event_set_end_time">Set End Time</string>
    <string name="add_event_title_of_event">Title of Event</string>
    <string name="event_item">Event Item</string>
    <string name="title_activity_display_events_list">DisplayEventsList</string>
    <string name="add_events_title">List of Events</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="movie_item">Movie Item</string>
    <string name="edit_event_id">editEventID</string>
    <string name="new_Event">New Event</string>
    <string name="movie_select">movie select</string>
    <string name="movie_id">movie id</string>
    <string name="attendee_name">Name</string>
    <string name="attendee_list">attendeeList</string>
    <string name="remove_Attendee">Remove Attendee</string>
    <string name="list_of_movies">List Of Movies</string>
    <string name="movie_night_planner">Movie Night Planner</string>
    <string name="view_events">View Events</string>
    <string name="save">Save</string>
    <string name="movie">Movie</string>
    <string name="select_movie">Select Movie</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="week_of">Week of</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!--<string name="google_maps_api_key">AIzaSyAeatrky9x4HjUSewSRatxhzlMHhu_1biM</string>-->

    <!-- Strings related to Settings -->

    <!-- Preference Keys -->
    <string name="PREF_NOTIFICATION_THRESHOLD"> Notification threshold Pref</string>
    <string name="PREF_REMINDER"> Remind again duration Pref</string>
    <string name="PREF_NOTIFICATION_PERIOD"> Notification Period Pref</string>

    <!-- Settings Title Strings -->
    <string name="notification_threshold_title">Notification Threshold</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_maps">Map</string>

</resources>
