<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEventInfo">

    <EditText
        android:id="@+id/addEventTitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/add_event_title_of_event"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/addEventStartDateTextView"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/add_event_start_date"
        android:textAlignment="center"
        app:autoSizeTextType="uniform"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeMaxTextSize="100sp"
        app:autoSizeStepGranularity="2sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addEventTitleText" />

    <Button
        android:id="@+id/addEventSetDateBtn"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/add_event_set_start_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addEventStartDateTextView"
        app:layout_constraintTop_toBottomOf="@+id/addEventTitleText" />

    <TextView
        android:id="@+id/addEventStartTimeTextView"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/add_event_start_time"
        android:textAlignment="center"
        app:autoSizeMaxTextSize="100sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addEventStartDateTextView" />

    <Button
        android:id="@+id/addEventSetStartTimeBtn"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/add_event_set_start_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addEventStartTimeTextView"
        app:layout_constraintTop_toBottomOf="@+id/addEventSetDateBtn" />

    <TextView
        android:id="@+id/addEventEndDateTextView"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/add_event_end_date"
        android:textAlignment="center"
        app:autoSizeMaxTextSize="100sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addEventStartTimeTextView" />

    <TextView
        android:id="@+id/addEventEndTimeTextView"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/add_event_end_time"
        android:textAlignment="center"
        app:autoSizeMaxTextSize="100sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addEventEndDateTextView" />

    <Button
        android:id="@+id/addEventSetEndDateBtn"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/add_event_set_end_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addEventEndDateTextView"
        app:layout_constraintTop_toBottomOf="@+id/addEventSetStartTimeBtn" />

    <Button
        android:id="@+id/addEventSetEndTimeBtn"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/add_event_set_end_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addEventEndTimeTextView"
        app:layout_constraintTop_toBottomOf="@+id/addEventSetEndDateBtn" />

    <Button
        android:id="@+id/addEventInfoSaveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/addEventVenueText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="Venue"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addEventEndTimeTextView"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/addEventMovieTitleText"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:text="@string/movie"
        android:textAlignment="center"
        app:autoSizeMaxTextSize="100sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addEventInfoRemoveAttenBtn" />

    <Button
        android:id="@+id/addEventMovieBtn"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/select_movie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toEndOf="@+id/addEventMovieTitleText"
        app:layout_constraintTop_toBottomOf="@+id/addEventAddAttenBtn" />

    <Button
        android:id="@+id/addEventDelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="Delete"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addEventAddAttenBtn"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="Add Attendees"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.824"
        app:layout_constraintStart_toEndOf="@+id/addEventInfoRemoveAttenBtn"
        app:layout_constraintTop_toBottomOf="@+id/addEventVenueText" />

    <Button
        android:id="@+id/addEventInfoRemoveAttenBtn"
        android:layout_width="120dp"
        android:layout_height="53dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Remove Attendee"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addEventVenueText" />

    <EditText
        android:id="@+id/addEventInfoLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="Latitude, Longitude"
        android:inputType="number|text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addEventMovieTitleText"
        tools:text="Latitude, Longitude" />

</android.support.constraint.ConstraintLayout>